new files uplodade

--- a/react9/package.json
+++ b/react9/package.json
@@ -19,7 +19,6 @@
     "extends": [
       "react-app",
       "react-app/jest"
-      
     ]
   },
   "browserslist": {
@@ -33,5 +32,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
